# code-assist.nvim

./: .luarc.json  CLAUDE.md  GEMINI.md  README.md  other.py  test.py
commands/: code-complete.md
lua/code-assist/: agent.lua  config.lua  ghost.lua  init.lua  mcp.lua  parser.lua  prompt.lua  session.lua  tmux.lua  util.lua
mcp-server/: code_assist_mcp.py  pyproject.toml
plugin/: code-assist.lua
