[project]
name = "code-assist-mcp"
version = "0.1.0"
description = "MCP server bridge between code-assist.nvim and a Claude/Gemini agent."
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.scripts]
code-assist-mcp = "code_assist_mcp:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["code_assist_mcp.py"]

[tool.hatch.build.targets.sdist]
include = ["code_assist_mcp.py", "README.md"]
